--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YugiohDeck">
         <activity
+            android:name=".NewDeckActivity"
+            android:exported="true"
+            android:label="@string/title_activity_new_decka"
+            android:theme="@style/Theme.YugiohDeck.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
